--- a/drinks.html
+++ b/drinks.html
@@ -36,6 +36,16 @@
     the class to col-md which is bigger than the col-sm-2 class
     the letters use. This means that when we shrink the page, we hit col-md limit
     first</p>
+    <div class="container">
+      <img src="cocacola.PNG" class="img-fluid" alt="coca cola can" width="150" height="250">
+      <img src="lemonade.PNG" class="img-fluid" alt="cup of lemonade" width="150" height="250">
+      <img src="espresso.PNG" class="img-fluid" alt="cup of espresso" width="150" height="250">
+    </div>
+    <div class="container">
+      <img src="cocacola.PNG" class="img-thumbnail" alt="coca cola can" width="150" height="250">
+      <img src="lemonade.PNG" class="img-thumbnail" alt="cup of lemonade" width="150" height="250">
+      <img src="espresso.PNG" class="img-thumbnail" alt="cup of espresso" width="150" height="250">
+    </div>
 
 </body>
 </html>
