--- a/drinks.html
+++ b/drinks.html
@@ -47,5 +47,56 @@
       <img src="espresso.PNG" class="img-thumbnail" alt="cup of espresso" width="150" height="250">
     </div>
 
+    <table class="table table-striped">
+      <caption>Table of letters, drinks, star names, and fish</caption>
+      <thead>
+        <tr>
+        <th scope="col">Letter</th>
+        <th scope="col">Drink</th>
+        <th scope="col">Star Name</th>
+        <th scope="col">Fish</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">C</th>
+          <td class="text-primary">Coca-Cola</td>
+          <td class="text-warning">Corvus</td>
+          <td class="text-danger">Candlefish</td>
+        </tr>
+        <tr>
+          <th scope="row">O</th>
+          <td class="text-primary">Orange Juice</td>
+          <td class="text-warning">Ogma</td>
+          <td class="text-danger">Olice Flounder</td>
+        </tr>
+        <tr>
+          <th scope="row">L</th>
+          <td class="text-primary">Lemonade</td>
+          <td class="text-warning">Lesath</td>
+          <td class="text-danger">Lionfish</td>
+        </tr>
+        <tr>
+          <th scope="row">B</th>
+          <td class="text-primary">Bud Light</td>
+          <td class="text-warning">Bellatrix</td>
+          <td class="text-danger">Barracuda</td>
+        </tr>
+        <tr>
+          <th scope="row">E</th>
+          <td class="text-primary">Espresso</td>
+          <td class="text-warning">Errai</td>
+          <td class="text-danger">Eel</td>
+        </tr>
+        <tr>
+          <th scope="row">R</th>
+          <td class="text-primary">Root Beer</td>
+          <td class="text-warning">Rigel</td>
+          <td class="text-danger">Reef Shark</td>
+        </tr>
+
+      </tbody>
+    </table>
+
 </body>
 </html>
