Created buttons and groups

--- a/drinks.html
+++ b/drinks.html
@@ -98,5 +98,24 @@
       </tbody>
     </table>
 
+    <div class="btn-toolbar" role="group" aria-label="Letters Button Group">
+    <div class="container" role="group" aria-label="Letters with Images Button Group">
+      <p>Letters with Images Button Group</p>
+      <button type="button" class="btn btn-success">C</button>
+      <button type="button" class="btn btn-success">L</button>
+      <button type="button" class="btn btn-success">E</button>
+    </div>
+
+    <div class="container" role="group" aria-label="Alert Letters Button Group">
+      <p>Alert Letters Button Group</p>
+      <button type="button" class="btn btn-warning">R</button>
+      <button type="button" class="btn btn-warning">O</button>
+    </div>
+
+    <div class="container" role="group" aria-label="Danger Letters Button Group">
+      <p>Danger Letters Button Group</p>
+      <button type="button" class="btn btn-danger">B</button>
+    </div>
+  </div>
 </body>
 </html>
