Added drodown menu
added dropdown menu that links to two different web pages

--- a/drinks.html
+++ b/drinks.html
@@ -98,6 +98,8 @@
       </tbody>
     </table>
 
+
+
     <div class="btn-toolbar" role="group" aria-label="Letters Button Group">
     <div class="container" role="group" aria-label="Letters with Images Button Group">
       <p>Letters with Images Button Group</p>
@@ -117,5 +119,16 @@
       <button type="button" class="btn btn-danger">B</button>
     </div>
   </div>
+
+  <div class="container">
+  <div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Dropdown Button</button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="https://44-563-web-apps-s24.github.io/44563-webapps-s24-assignment5-William-Colbert/basic.html">Basic.html</a>
+      <a class="dropdown-item" href="https://44-563-web-apps-s24.github.io/44563-webapps-s24-assignment5-William-Colbert/advanced.html">Advanced.html</a>
+    </div>
+  </div>
+  </div>
+  
 </body>
 </html>
