--- a/drinks.html
+++ b/drinks.html
@@ -13,6 +13,26 @@
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
 <body>
+
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="https://44-563-web-apps-s24.github.io/44563-webapps-s24-assignment5-William-Colbert/drinks.html">A Few Drinks</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr.auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="https://44-563-web-apps-s24.github.io/44563-webapps-s24-assignment5-William-Colbert/basic.html">Basic</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="https://44-563-web-apps-s24.github.io/44563-webapps-s24-assignment5-William-Colbert/advanced.html">Advanced</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </nav>
+
     <h2>Have a cup with William Colbert</h2>
     <div class="container">
         <div class="row">
@@ -129,6 +149,6 @@
     </div>
   </div>
   </div>
-  
+
 </body>
 </html>
