--- a/drinks.html
+++ b/drinks.html
@@ -150,5 +150,22 @@
   </div>
   </div>
 
+
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="form-group">
+      <label for="Drink" class="form-label">Enter your drink</label>
+      <input type="text" class="form-control" id="Drink">
+    </div>
+    <div class="form-check">
+      <label class="form-check-label" for="check">Sign up for newsletter?</label>
+      <input type="checkbox" class="form-check-input" id="check">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </body>
 </html>
